# devices-monitor

./: Cargo.toml
.github/workflows/: rust_ci.yml
src/: main.rs
