[package]
name = "devices-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11.7"
chrono = "0.4.39"
directories = "6.0.0"
log = "0.4.25"
notify-rust = "4.11.5"
pretty_env_logger = "0.5.0"
ratatui = "0.29.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = "1.13.2"
